--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "simulation-costs": {
+    "simulation-roadway-spa": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/simulation-costs",
+            "outputPath": "dist/simulation-roadway-spa",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -59,7 +59,7 @@
                 },
                 {
                   "type": "anyComponentStyle",
-                  "maximumWarning": "6kb",
+                  "maximumWarning": "50mb",
                   "maximumError": "50mb"
                 }
               ]
@@ -69,18 +69,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "simulation-costs:build"
+            "browserTarget": "simulation-roadway-spa:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "simulation-costs:build:production"
+              "browserTarget": "simulation-roadway-spa:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "simulation-costs:build"
+            "browserTarget": "simulation-roadway-spa:build"
           }
         },
         "test": {
@@ -118,18 +118,18 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "simulation-costs:serve"
+            "devServerTarget": "simulation-roadway-spa:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "simulation-costs:serve:production"
+              "devServerTarget": "simulation-roadway-spa:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "simulation-costs",
+  "defaultProject": "simulation-roadway-spa",
   "cli": {
     "analytics": false
   }
